--- a/src/style.css
+++ b/src/style.css
@@ -7,24 +7,24 @@ body {
   background-color: #F5F5F5;
   padding: 20px;
   font-family: 'Karla', sans-serif;
+  height: 100%
 }
 
 main {
-  border-radius: 10px; 
-  min-height: 420px;
-  max-width: 8cd00px;
+  border-radius: 10px;
+  /* min-height: 420px;
+  max-width: 800px; */
   background-color: #F5F5F5;
-  padding: 20px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
 
-.board--frame{
-  border-radius: 10px; 
-  padding: 10px;
-  border:3px solid;
+.board--frame {
+
+  border-radius: 10px;
+  padding: 8px;
+  border: 8px solid;
 }
 
 .title {
@@ -39,35 +39,41 @@ main {
   text-align: center;
 }
 
-.board--holder{
+.board--holder {
   display: grid;
-  grid-template: auto auto / repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  /* grid-template: auto auto / repeat(5, 1fr); */
   gap: 5px;
 }
-.cross{
+
+.cross {
   color: #FFFFFF;
 }
-.board--item{
-  height: 140px;
-  width: 140px;
+
+.board--item {
+  width: 120px;
+  height: 120px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  /* center the content inside.. it shows X */
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
-.roll--btn{
+
+.roll--btn {
   font-family: 'Karla', sans-serif;
   font-weight: bold;
-  font-size:1,2rem;
+  font-size: 1, 2rem;
   color: white;
-  padding:14px;
-  margin-top:20px;
+  padding: 14px;
+  margin-top: 20px;
   background: #5035FF;
   box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
-  border:none;
+  border: none;
   border-radius: 10px;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .roll--btn:focus {
@@ -77,5 +83,3 @@ main {
 .roll--btn:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
-
-
